--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1160,10 +1160,10 @@ a#logo_link:hover {
 	text-decoration: none;
 }
 //####################Registration page#################################################
-.edit_login_user_page
+#edit_login_user_page
 {
 	padding: 15px;
-	width: 320px;
+	
 	background: white;
 	box-shadow: 5px 5px 5px #888888;
 	margin-top: 15px;
@@ -1282,16 +1282,30 @@ a#logo_link:hover {
 			color: #0088cc;
 		}
 }
-.icon-chevron-right {
+.icon-chevron-right 
+{
 
-float: right;
+	float: right;
 }
-.icon-chevron-up {
-float: right
+.icon-chevron-up 
+{
+	float: right
 }
 
 
 form 
 {
 	margin: 0 0 30px;
+}
+
+//***************************FOOTER************************************************************
+
+#footer li a
+{
+	padding-left:5px;
+	padding-right: 5px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+
+
 }
