--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<div class = "edit_login_user_page">
+<div class= "span4"></div>
+<div class= "span4" id= "edit_login_user_page">
   <a href = "<%=user_omniauth_authorize_path(:facebook)%>" id= "facebook-signin"> 
           <div class = "facebook_login">
             Sign Up using Facebook
