--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,10 +112,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand-footer" >Bikesales</a>
+          
           <div class="container-fluid nav-collapse">
-            <ul class="nav">
-              <li><p>&copy; Company 2013</p></li>
+            <ul class="nav" id = "footer">
+              <li> <a href="<%=terms_and_conditions_path%>"> Terms and Conditions </a></li>
+              <li> <a href="<%=about_us_path%>"> Our Team </a></li>
+              <li> <a href="<%=contacts_path%>"> Contact Us </a></li>
+              <li><a href="<%=how_it_works_path%>">How it works</a></li>
+            </ul>
+            <ul class = "nav pull-right" id = "footer">  
+              <li><p>&copy; Bechnu.com 2013 "Because we can!"</p></li>
+              <li></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
