--- a/app/views/user_mailer/enquiry.html.erb
+++ b/app/views/user_mailer/enquiry.html.erb
@@ -1,7 +1,7 @@
 Dear<%= @bike.user.name%>
-<%= @comment%>
-Regards, 
-<%= @name%> 
-<%= @email%>
+<%= @comment%><br>
+Regards, </br>
+<%= @name%> </br>
+<%= @email%></br>
 <%= @tel%>
 
