--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,5 @@
-<div class = "edit_login_user_page">
+<div class= "span4"></div>
+<div class= "span4" id= "edit_login_user_page">
 <legend>Resend confirmation instructions</legend>
 
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
@@ -12,3 +13,4 @@
 
 <%= render "devise/shared/links" %>
 </end>
+</div>
