--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,5 @@
-<div class = "edit_login_user_page">
+<div class= "span4"></div>
+<div class= "span4" id= "edit_login_user_page">
 <legend>Forgot your password?</legend>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
