--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,4 +1,6 @@
-<h2>Resend unlock instructions</h2>
+<div class= "span4"></div>
+<div class= "span4" id= "edit_login_user_page">
+<legend>Resend unlock instructions</legend>
 
 <%= form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -10,3 +12,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
