--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -934,7 +934,40 @@ legend
 		padding-left: 0px;
 	}
 }
+@media (min-width:600px) and (max-width: 696px)
+{
+	.navbar .btn-group .btn 
+	{
+		padding-left: 0;
+		padding-right: 0;
+	}
+	.nav-collapse .nav > li > a
+	{
 
+		padding-left: 5px;
+		padding-right: 2px;
+	}
+	.nav-collapse .nav > li > a:hover
+	{
+		background-color: #0074cc;
+	}
+}
+
+@media (max-width: 375px)
+{
+	span#username 
+	{
+		font-size:0
+	}
+	#icon_button{
+	height:18px
+	}
+	.navbar .btn-group .btn 
+	{
+		padding-left: 5px;
+		padding-right: 5px;
+	}
+}
 @media (min-width:600px) and (max-width: 979px)
 {
 	.nav-collapse .nav > li 
@@ -957,7 +990,7 @@ legend
 	.nav-collapse.collapse 
 	{
 		height: auto !important;
-		overflow: visible !important;
+		
   	}
  	.navbar .btn-navbar 
  	{
