Bug fixes and refine search update, facebook post proper

--- a/app/assets/javascripts/bikes/index.js.erb
+++ b/app/assets/javascripts/bikes/index.js.erb
@@ -1,13 +1,13 @@
 $('ul#selection.nav.nav-list > li').children().hide(),
-$('i.icon-plus-sign').show(),
+$('i.icon-chevron-right').show(),
 
 
 
-$('i.icon-minus-sign').click(function(){
+$('i.icon-chevron-up').click(function(){
 $(this).parent().children().hide(),
 $(this).parent().find(">:first-child").show()
 });
-$('i.icon-plus-sign').click(function(){
+$('i.icon-chevron-right').click(function(){
 $(this).parent().children().show(),
 $(this).hide()
 });
