--- a/app/views/bike_specs/showroom.html.erb
+++ b/app/views/bike_specs/showroom.html.erb
@@ -37,7 +37,7 @@
     <table class= "browse_body_type">
       <tr>
         <td><a href = '<%=bike_specs_path(body: "Cruiser")%>'><div class= "image_border"><%=image_tag "cruiser.jpg", size: "133x120"%>Cruiser</a></div></td>
-        <td><a href = '<%=bike_specs_path(body: "Scooter")%>'><div class= "image_border"><%= image_tag "scooter.jpg", size: "133x120"%>Scooter</a></div></td>
+        <td><a href = '<%=bike_specs_path(body: "Scooter")%>'><div class= "image_border"><%= image_tag "scooters.jpg", size: "133x120"%>Scooter</a></div></td>
       </tr>
       <tr>
         <td><a href = '<%=bike_specs_path(body: "Sports")%>'><div class= "image_border"><%= image_tag "sport.jpg", size: "133x120"%>Sport</a></div></td>
