--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -96,7 +96,7 @@
 
     </div> <!-- /container -->
     <!-- Modal -->
-    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div id="myModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h3 id="myModalLabel">Sign In</h3>
@@ -162,6 +162,11 @@
 
        
 });
+  if ($(window).width() <= 979 && $(window).width() >=600){
+      setTimeout(function() {
+          $("#toggle").trigger('click');
+      },1);}
+
      var width= $(window).width()/5
       
         $("div.logo").animate({
