--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -119,7 +119,7 @@ body
 	.icon-remove 
 	{
 		position: absolute;
-		left: 50%;
+		left: 80%;
 	}
 	
 }
@@ -1341,4 +1341,22 @@ form
 	padding-bottom: 2px;
 
 
+}
+ul#selection li 
+{
+	line-height: 18px;
+	background: #f1f1f1;
+	padding: 10px;
+	margin-bottom: 4px;
+	border-radius: 6px;
+	position: relative;
+}
+ul#selection li ul li
+{
+	margin-bottom:-4px;
+	padding: 5px;
+}
+.current_selection ul.nav.nav-list li div a i{
+	float: right;
+	background: #f1f1f1;
 }
