--- a/app/views/bike_specs/show.html.erb
+++ b/app/views/bike_specs/show.html.erb
@@ -22,7 +22,7 @@
     <div class = "span6">
       <div class= "info">
         <legend>
-          <%=@bike_spec.make%> <%=@bike_spec.model%>
+          <%=@bike_spec.make%> <%=@bike_spec.model%>  <div class="fb-like" data-send="true" data-layout="button_count" data-width="45" data-show-faces="false"></div>
         </legend>
     <table class= "table"><tr>
 
