--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -35,7 +35,7 @@
     <table class= "browse_body_type">
       <tr>
         <td><a href = '<%=bikes_path(body: "Cruiser")%>'><div class= "image_border"><%=image_tag "cruiser.jpg", size: "95x80"%>Cruiser</a></div></td>
-        <td><a href = '<%=bikes_path(body: "Scooter")%>'><div class= "image_border"><%= image_tag "scooter.jpg", size: "95x80"%>Scooter</a></div></td>
+        <td><a href = '<%=bikes_path(body: "Scooter")%>'><div class= "image_border"><%= image_tag "scooters.jpg", size: "95x80"%>Scooter</a></div></td>
         <td><a href = '<%=bikes_path(body: "Sports")%>'><div class= "image_border"><%= image_tag "sport.jpg", size: "95x80"%>Sport</a></div></td>
         <td><a href = "<%=bikes_path(body: 'Super Sport')%>"><div class= "image_border"><%= image_tag "supersport.jpg", size: "95x80"%>Super Sport</a></div></td>
         <td><a href = "<%=bikes_path(body: 'Standard')%>"><div class= "image_border"><%= image_tag "standard.jpg", size: "95x80"%>Standard</a></div></td>
