--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -10,17 +10,28 @@
      <i class = " icon-chevron-left"> </i> <%= link_to " Back to search", bikes_path(sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%>
       <div class = "save_search">
         <% if current_user and current_user.favourites.where(bike_id: @bike.id).empty?%>
-          <i class = "icon-star"></i><a id= "save_search"> Save Search</a>
+          <i class = "icon-star"></i><a id= "save_search" style="cursor:pointer"> Save Search</a>
         <%elsif !current_user%>
          <i class = "icon-star"></i>
-          <a href="#" data-toggle="tooltip" title="Sign in First">Save Search</a>
+          <a href="#" data-toggle="tooltip" title="Sign in First" style="cursor:pointer">Save Search</a>
         <%else%>
           Saved
         <%end%>
       </div>
-      <i class= "icon-envelope"></i><a href="#send_to_friend" data-toggle="modal"> Send to Friend</a>
-
-
+      <div>
+      <a href="#send_to_friend" data-toggle="modal"><i class= "icon-envelope"></i> Send to Friend</a>
+      </div>
+      <div><a id = "share" style="cursor:pointer">
+            <i class = "icon-share"> </i>Share on Facebook
+          </a>
+      </div>
+    <% if @bike.user==current_user%>
+   <div><i class = "icon-edit"></i><%= link_to ' Edit this Post', edit_bike_path(@bike) %></div>
+   <div>
+      <i class = "icon-trash"></i><%= link_to ' Remove this Post',bike_path(@bike),:method => 'delete',
+              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) %>
+  </div>  
+  <%end%>
     </div>
     <%=render "current_selection"%>
   </div>
@@ -34,9 +45,7 @@
       <%= link_to "Next", bike_path(@next_bike, sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color:params[:color],type: params[:type]),class:"btn btn-primary" if !@next_bike.nil?%>
      <%= @bike.year %>  <%= @bike.make %>  <%= @bike.model %>  <%= @bike.variant if !@bike.variant.nil? %>
 </div>
-  <div class="fb-like" data-send="true" data-layout="button_count" data-width="45" data-show-faces="false"></div><a id = "share">
-  Share on Facebook
-</a>
+  <div class="fb-like" data-send="true" data-layout="button_count" data-width="45" data-show-faces="false"></div>
     <div class = "picture">
       <%= image_tag @bike.pictures.last.file.url(:original), id: "bike_picture" if !@bike.pictures.empty? %>
     </div>
@@ -92,6 +101,7 @@
   </div>
 
   <div class = "span3">
+
     <%= render "enquiry"%>
 
   </div>
@@ -107,20 +117,6 @@
 </div>
 </div>
 </div>
-<% if @bike.user==current_user%>
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              bikes_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_bike_path(@bike), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              bike_path(@bike),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
-  
-  </div>
-<%end%>
     
 <script type="text/javascript">
 //<![CDATA[
