--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1242,6 +1242,11 @@ a#logo_link:hover {
 	border-radius: 5px;
 	border: 1px solid #888888;
 	margin-bottom: 50px;
+	a:hover 
+	{
+		color: black;
+		background-color: black;
+	}
 }
 #bike_spec_span 
 {
@@ -1347,14 +1352,16 @@ ul#selection li
 	line-height: 18px;
 	background: #f1f1f1;
 	padding: 10px;
-	margin-bottom: 4px;
-	border-radius: 6px;
+	margin-bottom: 1.5px;
 	position: relative;
+	border: 1px solid silver;
 }
+
 ul#selection li ul li
 {
 	margin-bottom:-4px;
 	padding: 5px;
+	border: none;
 }
 .current_selection ul.nav.nav-list li div a i{
 	float: right;
