--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1367,3 +1367,70 @@ ul#selection li ul li
 	float: right;
 	background: #f1f1f1;
 }
+#main_about_us
+{ 
+	header 
+	{
+		padding: 60px 0;
+		background: #e5e9ec;
+		color: #222831;
+		h2 
+		{
+			color: #222831;
+			line-height: 1.2;
+
+			background-size: 90px;
+			font-size: 36px;
+			font-weight: 300;
+			max-width: 600px;
+			text-align: center;
+			margin: 0 auto;
+		}
+	}
+	.page.container
+	{
+		section 
+		{
+			padding: 40px 0;
+			h1
+			{
+				font-size: 24px;
+				margin-top: 0;
+				font-weight: 400;
+			}
+			div p
+			{
+				color: #434950;
+				line-height: 1.5;
+				margin-bottom: 1em;
+				font-size: 18px;
+			}
+		}
+		section.row.team
+		{
+			h2
+			{
+				font-size: 24px;
+				margin-top: 0;
+				font-weight: 400;
+			}
+			.span2
+			{
+				img 
+				{
+					border-radius: 200px;
+					margin-bottom: 20px;
+				}
+				h3{
+					font-weight: 400;
+					font-size: 26px;
+					margin: 0;
+					line-height: 1;
+				}
+
+			}
+		}
+
+	}
+}
+
