--- a/app/views/about_us/index.html.erb
+++ b/app/views/about_us/index.html.erb
@@ -1,5 +1,50 @@
-<div class= "span3"></div>
-<div class= "span6" id= "edit_login_user_page">
+<div class= "span12" id= "edit_login_user_page">
 	<legend>About Us</legend>
-	It is Me!!!
+	
+    <div id="main_about_us">
+        
+<header>
+    <h2>We're here to make buying and selling your bikes effortless.</h2>
+</header>
+
+<div class="page container">
+    <section class="row">
+    <h1 class="span2 offset1">About Us</h1>
+    <div class="span8">
+        <p>We all love riding our bikes. It is the most efficient way to travel in Nepal. There seems to be thousands of people trying to buy and sell their bike at this very moment, but no proper infrastructure to cater them all together. Bikes.bechnu.com was built with sole purpose to help people get highest price while selling them and lowest price while buying them.</p>
+ 
+  <p> We want to make selling and buying your bikes effortless.</p>
+
+    <hr>
+ 
+  
+  <p>
+      Drop us an email at <a href="mailto:contactus@bikes.bechnu.com">contactus@bikes.bechnu.com</a> or facebook <a href="http://facebook.com/bikesBechnu" target="_blank">BikesBechnu</a>.
+
+  </section>
+
+   <section class="row team">
+    <h2 class="span2 offset1">Our team</h2>
+      <div class="span2">
+          <%=image_tag "romal.jpg",:size=>"170x170"%>
+          <h3>Romal</h3>
+          <p><span>Founder &amp; Tech &amp; Design</span> </p>
+      </div>
+      <div class= "span1"></div>
+      <div class="span2">
+           <%=image_tag "bidhan.jpg", :size=>"170x170"%>
+          <h3>Bidhan</h3>
+          <p><span>Founder &amp; Tech &amp; Design</span> </p>
+      </div>
+  </div>
 </div>
+
+
+        <div id="push"></div>
+    </div>
+
+   
+</div>
+
+
+
