--- a/app/views/bikes/_new_bike.html.erb
+++ b/app/views/bikes/_new_bike.html.erb
@@ -2,45 +2,38 @@
 <div class = "results_main_page">
   <div class= "results_main_page_sub">
     <h2>New Bikes</h2>
-    <table >
-      <thead>
-        <tr>
-          <table class= "new_bike_make_table">
-           	<tr>
-          		<td>
-                <ul>
-          			  <li><%=link_to "Hero Honda", bike_specs_path(make: "Hero Honda")%></li>
-          		    <li><%=link_to "Bajaj", bike_specs_path(make: "Bajaj")%></li>
-          		    <li><%=link_to "TVS", bike_specs_path(make: "TVS")%></li>
-                  <dl></dl>
-          		  </ul>
-              </td>
-          		<td>
-                <ul>
-          		    <li><%=link_to "Yamaha", bike_specs_path(make: "Yamaha")%></li>
-          		    <li><%=link_to "Suzuki", bike_specs_path(make: "Suzuki")%></li>
-          		    <li><%=link_to "Honda", bike_specs_path(make: "Honda")%></li>
-                  <dl></dl>
-          		  </ul>
-              </td>
-          	</tr>	
-          </table>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
+    <thead>
+      <tr>
+        <table class= "new_bike_make_table">
+         	<tr>
+        		<td>
+              <ul>
+        			  <li><%=link_to "Hero Honda", bike_specs_path(make: "Hero Honda")%></li>
+        		    <li><%=link_to "Bajaj", bike_specs_path(make: "Bajaj")%></li>
+        		    <li><%=link_to "TVS", bike_specs_path(make: "TVS")%></li>
+        		  </ul>
+            </td>
+        		<td>
+              <ul>
+        		    <li><%=link_to "Yamaha", bike_specs_path(make: "Yamaha")%></li>
+        		    <li><%=link_to "Suzuki", bike_specs_path(make: "Suzuki")%></li>
+        		    <li><%=link_to "Honda", bike_specs_path(make: "Honda")%></li>
+        		  </ul>
+            </td>
+        	</tr>	
+        </table>
+      </tr>
+    </thead>
   </div>  
   <div class = "sell_your_bike">
     <h2>Sell your Bike</h2>
     <div class="sell-call-to-action">
       <a href="/bikes/new" class="create-ad">Create Ad</a>
     </div>
-      <% if user_signed_in?%>
-        <a href="<%=profile_user_path(current_user)%>" class="manage-ad">Manage your Ad</a>
-      <%else%>
-        <a href="<%=new_user_session_path%>" class="manage-ad">Manage your Ad</a>
-      <%end%>
-    
+    <% if user_signed_in?%>
+      <a href="<%=profile_user_path(current_user)%>" class="manage-ad">Manage your Ad</a>
+    <%else%>
+      <a href="<%=new_user_session_path%>" class="manage-ad">Manage your Ad</a>
+    <%end%>
   </div>
-</div><!--div results -->
+</div>
