--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -1,158 +1,147 @@
 
-
-
-
-<div id="main_page_border" class= "span12">
-  <div class= "span9">
-    <div class = "main_page">
-    <%=render "main_search_tool"%>
+  <div id="main_page_border" class= "span12">
+    <div class= "span9">
+      <div class = "main_page">
+        <%=render "main_search_tool"%>
+      </div>
+    </div>
+    <div id= "new_bike" class= "span3">
+      <%=render "new_bike"%>    
     </div>
   </div>
-  <div id= "new_bike"class= "span3">
-    <%=render "new_bike"%>    
-  </div>
-</div>
-  
 
-<div class= "span12">
-<div  id = "sponsored_links">
-    <%=render "sponsored_links"%>    
-
+  <div class= "span12">
+    <div  id = "sponsored_links">
+      <%=render "sponsored_links"%>    
+    </div>
   </div>
 
-</div>
-
-
-<div id="main_page_browse" class= "span12">
-  <div class = "row">
-  <div class= "span8">
-    
-
-
+  <div id="main_page_browse" class= "span12">
     <div class = "row">
-    <div class = "main_page_browse_by">
-    <legend>Browse By: Body Type</legend>
-    <table class= "browse_body_type">
-      <tr>
-        <td><a href = '<%=bikes_path(body: "Cruiser")%>'><div class= "image_border"><%=image_tag "cruiser.jpg", size: "95x80"%>Cruiser</a></div></td>
-        <td><a href = '<%=bikes_path(body: "Scooter")%>'><div class= "image_border"><%= image_tag "scooters.jpg", size: "95x80"%>Scooter</a></div></td>
-        <td><a href = '<%=bikes_path(body: "Sports")%>'><div class= "image_border"><%= image_tag "sport.jpg", size: "95x80"%>Sport</a></div></td>
-        <td><a href = "<%=bikes_path(body: 'Super Sport')%>"><div class= "image_border"><%= image_tag "supersport.jpg", size: "95x80"%>Super Sport</a></div></td>
-        <td><a href = "<%=bikes_path(body: 'Standard')%>"><div class= "image_border"><%= image_tag "standard.jpg", size: "95x80"%>Standard</a></div></td>
-        <td><a href = '<%=bikes_path(body: "Trail")%>'><div class= "image_border"><%= image_tag "trail.jpg", size: "95x80"%>Trail</a></div></td>
-      </tr> 
-    </table>  
-    </div><!--main_page_browse_by-->
-  </div>
-  <div class = "row">
-  
-    <div class = "main_page_browse_by">
-    <legend>Browse By: Top Makers</legend>
-    <table class= "browse_makers">
-      <tr>
-        <td><a href = '<%=bikes_path(make: "Bajaj")%>'><div class= "image_border"><%=image_tag "bajaj.jpg", size: "40x40"%>Bajaj</a></div></td>
-        <td><a href = '<%=bikes_path(make: "Daelim")%>'><div class= "image_border"><%= image_tag "daelim.jpg", size: "40x40"%>Daelim</a></div></td>
-        <td><a href = '<%=bikes_path(make: "Hero Honda")%>'><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "40x40"%>Hero</a></div></td>
-        <td><a href = "<%=bikes_path(make: 'Honda')%>"><div class= "image_border"><%= image_tag "honda.jpg", size: "40x40"%>Honda</a></div></td>
-        <td><a href = "<%=bikes_path(make: 'Hyosung')%>"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "40x40"%>Hyosung</a></div></td>
-        <td><a href = "<%=bikes_path(make: 'Royal Enfield')%>"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "40x40"%>Enfield</a></div></td>
-        <td><a href = '<%=bikes_path(make: "Suzuki")%>'><div class= "image_border"><%= image_tag "suzuki.jpg", size: "40x40"%>Suzuki</a></div></td>
-        <td><a href = '<%=bikes_path(make: "TVS")%>'><div class= "image_border"><%= image_tag "tvs.jpg", size: "40x40"%>TVS</a></div></td>
-        <td><a href = '<%=bikes_path(make: "Yamaha")%>'><div class= "image_border"><%= image_tag "yamaha.jpg", size: "40x40"%>Yamaha</a></div></td>
-      </tr> 
-    </table>  
-    </div><!--main_page_browse_by-->
-  </div>
-  </div>
-  <div id= "facebook_page"class= "span4">
-    <div class="fb-like-box" data-href="https://www.facebook.com/FacebookDevelopers" data-width="292" data-height="405" data-show-faces="true" data-stream="true" data-show-border="true" data-header="false"></div>
-  </div>
-</div><!--row-->
-
-</div><!--span9-->
-
-  
- 
-<div id="main_page_browse" class= "span12">
-<div  class= "row">
-  <div class= "span6">
-    <div class = "main_page_browse_by">
-    <legend>Browse By: Price</legend>
-    <table class="browse_price">
-      <tr><td>
-        <ul>
-          <li><%= link_to "Up to Rs. 10,000",bikes_path(price_from: "0", price_to: "10001")%></li>
-          <li><%= link_to "Rs. 10,000 to Rs. 25,000",bikes_path(price_from: "9999", price_to: "25001")%></li>
-          <li><%= link_to "Rs. 25,000 to Rs. 50,000",bikes_path(price_from: "24999", price_to: "50001")%></li            >
-          <li><%= link_to "Rs. 50,000 to Rs. 75,000",bikes_path(price_from: "49999", price_to: "75001")%></li>
-          <li><%= link_to "Rs. 75,000 to Rs. 1,00,000",bikes_path(price_from: "74999", price_to: "100001")%></li>
-          <li><%= link_to "Rs. 1,00,000 to Rs. 1,50,000",bikes_path(price_from: "99999", price_to: "150001")%></li>
-        </ul>
-
-      </td>
-      <td>
-        <ul>
-          <li><%= link_to "Rs. 1,50,000 to Rs. 2,00,000",bikes_path(price_from: "149999", price_to: "200001")%></li>
-          <li><%= link_to "Rs. 2,00,000 to Rs. 3,00,000",bikes_path(price_from: "199999", price_to: "300001")%></li>
-          <li><%= link_to "Rs. 3,00,000 to Rs. 4,00,000",bikes_path(price_from: "299999", price_to: "400001")%></li>
-          <li><%= link_to "Rs. 4,00,000 to Rs. 5,00,000",bikes_path(price_from: "399999", price_to: "500001")%></li>
-          <li><%= link_to "Rs. 5,00,000 to Rs. 10,00,000",bikes_path(price_from: "499999", price_to: "1000001")%></li>
-          <li><%= link_to "More than Rs. 10,00,000",bikes_path(price_from: "999999", price_to: nil)%></li>
-        </ul>
-      </td>
-    </tr></table>
+      <div class= "span8">
+        <div class = "row">
+          <div class = "main_page_browse_by">
+            <legend>Browse By: Body Type</legend>
+            <table class= "browse_body_type">
+              <tr>
+                <td><a href = '<%=bikes_path(body: "Cruiser")%>'><div class= "image_border"><%=image_tag "cruiser.jpg", size: "95x80"%>Cruiser</div></a></td>
+                <td><a href = '<%=bikes_path(body: "Scooter")%>'><div class= "image_border"><%= image_tag "scooters.jpg", size: "95x80"%>Scooter</div></a></td>
+                <td><a href = '<%=bikes_path(body: "Sports")%>'><div class= "image_border"><%= image_tag "sport.jpg", size: "95x80"%>Sport</div></a></td>
+                <td><a href = "<%=bikes_path(body: 'Super Sport')%>"><div class= "image_border"><%= image_tag "supersport.jpg", size: "95x80"%>Super Sport</div></a></td>
+                <td><a href = "<%=bikes_path(body: 'Standard')%>"><div class= "image_border"><%= image_tag "standard.jpg", size: "95x80"%>Standard</div></a></td>
+                <td><a href = '<%=bikes_path(body: "Trail")%>'><div class= "image_border"><%= image_tag "trail.jpg", size: "95x80"%>Trail</div></a></td>
+              </tr> 
+            </table>  
+          </div><!--main_page_browse_by-->
+        </div>
+        <div class = "row">
+          <div class = "main_page_browse_by">
+            <legend>Browse By: Top Makers</legend>
+            <table class= "browse_makers">
+              <tr>
+                <td><a href = '<%=bikes_path(make: "Bajaj")%>'><div class= "image_border"><%=image_tag "bajaj.jpg", size: "40x40"%>Bajaj</a></div></td>
+                <td><a href = '<%=bikes_path(make: "Daelim")%>'><div class= "image_border"><%= image_tag "daelim.jpg", size: "40x40"%>Daelim</a></div></td>
+                <td><a href = '<%=bikes_path(make: "Hero Honda")%>'><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "40x40"%>Hero</a></div></td>
+                <td><a href = "<%=bikes_path(make: 'Honda')%>"><div class= "image_border"><%= image_tag "honda.jpg", size: "40x40"%>Honda</a></div></td>
+                <td><a href = "<%=bikes_path(make: 'Hyosung')%>"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "40x40"%>Hyosung</a></div></td>
+                <td><a href = "<%=bikes_path(make: 'Royal Enfield')%>"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "40x40"%>Enfield</a></div></td>
+                <td><a href = '<%=bikes_path(make: "Suzuki")%>'><div class= "image_border"><%= image_tag "suzuki.jpg", size: "40x40"%>Suzuki</a></div></td>
+                <td><a href = '<%=bikes_path(make: "TVS")%>'><div class= "image_border"><%= image_tag "tvs.jpg", size: "40x40"%>TVS</a></div></td>
+                <td><a href = '<%=bikes_path(make: "Yamaha")%>'><div class= "image_border"><%= image_tag "yamaha.jpg", size: "40x40"%>Yamaha</a></div></td>
+              </tr> 
+            </table>  
+          </div><!--main_page_browse_by-->
     </div>
-  </div>
- <div class= "span6">
-    <div class = "main_page_browse_by">
-    <legend>Browse By: Colour</legend>
-    <table class="browse_colour">
-      <tr>
-        <td><a href="<%=bikes_path(color: "Beige")%>"><div class= "color_box_beige"></div></a></td>
-        <td><%= link_to "Beige", bikes_path(color: "Beige")%></td>
-        <td><a href="<%=bikes_path(color: "Black")%>"><div class= "color_box_black"></div></a></td>
-        <td><%= link_to "Black", bikes_path(color: "Black")%></td>
-        <td><a href="<%=bikes_path(color: "Blue")%>"><div class= "color_box_blue"></div></a></td>
-        <td><%= link_to "Blue", bikes_path(color: "Blue")%></td>
-        <td><a href="<%=bikes_path(color: "Bronze")%>"><div class= "color_box_bronze"></div></a></td>
-        <td><%= link_to "Bronze", bikes_path(color: "Bronze")%></td>
-      </tr>
-      <tr>
-        <td><a href="<%=bikes_path(color: "Brown")%>"><div class= "color_box_brown"></div></a></td>
-        <td><%= link_to "Brown", bikes_path(color: "Brown")%></td>
-        <td><a href="<%=bikes_path(color: "Gold")%>"><div class= "color_box_gold"></div></a></td>
-        <td><%= link_to "Gold", bikes_path(color: "Gold")%></td>
-        <td><a href="<%=bikes_path(color: "Green")%>"><div class= "color_box_green"></div></a></td>
-        <td><%= link_to "Green", bikes_path(color: "Green")%></td>
-        <td><a href="<%=bikes_path(color: "Grey")%>"><div class= "color_box_grey"></div></a></td>
-        <td><%= link_to "Grey", bikes_path(color: "Grey")%></td>
-      </tr>      <tr>
-        <td><a href="<%=bikes_path(color: "Maroon")%>"><div class= "color_box_maroon"></div></a></td>
-        <td><%= link_to "Maroon", bikes_path(color: "Maroon")%></td>
-        <td><a href="<%=bikes_path(color: "Orange")%>"><div class= "color_box_orange"></div></a></td>
-        <td><%= link_to "Orange", bikes_path(color: "Orange")%></td>
-        <td><a href="<%=bikes_path(color: "Pink")%>"><div class= "color_box_pink"></div></a></td>
-        <td><%= link_to "Pink", bikes_path(color: "Pink")%></td>
-        <td><a href="<%=bikes_path(color: "Purple")%>"><div class= "color_box_purple"></div></a></td>
-        <td><%= link_to "Purple", bikes_path(color: "Purple")%></td>
-      </tr>      <tr>
-        <td><a href="<%=bikes_path(color: "Red")%>"><div class= "color_box_red"></div></a></td>
-        <td><%= link_to "Red", bikes_path(color: "Red")%></td>
-        <td><a href="<%=bikes_path(color: "Silver")%>"><div class= "color_box_silver"></div></a></td>
-        <td><%= link_to "Silver", bikes_path(color: "Silver")%></td>
-        <td><a href="<%=bikes_path(color: "White")%>"><div class= "color_box_white"></div></a></td>
-        <td><%= link_to "White", bikes_path(color: "White")%></td>
-        <td><a href="<%=bikes_path(color: "Yellow")%>"><div class= "color_box_yellow"></div></a></td>
-        <td><%= link_to "Yellow", bikes_path(color: "Yellow")%></td>
-      </tr>
-
-
-    </table>
     </div>
-  </div>
+    <div id= "facebook_page"class= "span4">
+      <div class="fb-like-box" data-href="https://www.facebook.com/FacebookDevelopers" data-width="292" data-height="405" data-show-faces="true" data-stream="true" data-show-border="true" data-header="false"></div>
+    </div>
   </div><!--row-->
-</div>
 
-  
-  
+  </div><!--span9-->
+
+    
+   
+  <div id="main_page_browse" class= "span12">
+  <div  class= "row">
+    <div class= "span6">
+      <div class = "main_page_browse_by">
+      <legend>Browse By: Price</legend>
+      <table class="browse_price">
+        <tr><td>
+          <ul>
+            <li><%= link_to "Up to Rs. 10,000",bikes_path(price_from: "0", price_to: "10001")%></li>
+            <li><%= link_to "Rs. 10,000 to Rs. 25,000",bikes_path(price_from: "9999", price_to: "25001")%></li>
+            <li><%= link_to "Rs. 25,000 to Rs. 50,000",bikes_path(price_from: "24999", price_to: "50001")%></li            >
+            <li><%= link_to "Rs. 50,000 to Rs. 75,000",bikes_path(price_from: "49999", price_to: "75001")%></li>
+            <li><%= link_to "Rs. 75,000 to Rs. 1,00,000",bikes_path(price_from: "74999", price_to: "100001")%></li>
+            <li><%= link_to "Rs. 1,00,000 to Rs. 1,50,000",bikes_path(price_from: "99999", price_to: "150001")%></li>
+          </ul>
+
+        </td>
+        <td>
+          <ul>
+            <li><%= link_to "Rs. 1,50,000 to Rs. 2,00,000",bikes_path(price_from: "149999", price_to: "200001")%></li>
+            <li><%= link_to "Rs. 2,00,000 to Rs. 3,00,000",bikes_path(price_from: "199999", price_to: "300001")%></li>
+            <li><%= link_to "Rs. 3,00,000 to Rs. 4,00,000",bikes_path(price_from: "299999", price_to: "400001")%></li>
+            <li><%= link_to "Rs. 4,00,000 to Rs. 5,00,000",bikes_path(price_from: "399999", price_to: "500001")%></li>
+            <li><%= link_to "Rs. 5,00,000 to Rs. 10,00,000",bikes_path(price_from: "499999", price_to: "1000001")%></li>
+            <li><%= link_to "More than Rs. 10,00,000",bikes_path(price_from: "999999", price_to: nil)%></li>
+          </ul>
+        </td>
+      </tr></table>
+      </div>
+    </div>
+   <div class= "span6">
+      <div class = "main_page_browse_by">
+      <legend>Browse By: Colour</legend>
+      <table class="browse_colour">
+        <tr>
+          <td><a href="<%=bikes_path(color: "Beige")%>"><div class= "color_box_beige"></div></a></td>
+          <td><%= link_to "Beige", bikes_path(color: "Beige")%></td>
+          <td><a href="<%=bikes_path(color: "Black")%>"><div class= "color_box_black"></div></a></td>
+          <td><%= link_to "Black", bikes_path(color: "Black")%></td>
+          <td><a href="<%=bikes_path(color: "Blue")%>"><div class= "color_box_blue"></div></a></td>
+          <td><%= link_to "Blue", bikes_path(color: "Blue")%></td>
+          <td><a href="<%=bikes_path(color: "Bronze")%>"><div class= "color_box_bronze"></div></a></td>
+          <td><%= link_to "Bronze", bikes_path(color: "Bronze")%></td>
+        </tr>
+        <tr>
+          <td><a href="<%=bikes_path(color: "Brown")%>"><div class= "color_box_brown"></div></a></td>
+          <td><%= link_to "Brown", bikes_path(color: "Brown")%></td>
+          <td><a href="<%=bikes_path(color: "Gold")%>"><div class= "color_box_gold"></div></a></td>
+          <td><%= link_to "Gold", bikes_path(color: "Gold")%></td>
+          <td><a href="<%=bikes_path(color: "Green")%>"><div class= "color_box_green"></div></a></td>
+          <td><%= link_to "Green", bikes_path(color: "Green")%></td>
+          <td><a href="<%=bikes_path(color: "Grey")%>"><div class= "color_box_grey"></div></a></td>
+          <td><%= link_to "Grey", bikes_path(color: "Grey")%></td>
+        </tr>      <tr>
+          <td><a href="<%=bikes_path(color: "Maroon")%>"><div class= "color_box_maroon"></div></a></td>
+          <td><%= link_to "Maroon", bikes_path(color: "Maroon")%></td>
+          <td><a href="<%=bikes_path(color: "Orange")%>"><div class= "color_box_orange"></div></a></td>
+          <td><%= link_to "Orange", bikes_path(color: "Orange")%></td>
+          <td><a href="<%=bikes_path(color: "Pink")%>"><div class= "color_box_pink"></div></a></td>
+          <td><%= link_to "Pink", bikes_path(color: "Pink")%></td>
+          <td><a href="<%=bikes_path(color: "Purple")%>"><div class= "color_box_purple"></div></a></td>
+          <td><%= link_to "Purple", bikes_path(color: "Purple")%></td>
+        </tr>      <tr>
+          <td><a href="<%=bikes_path(color: "Red")%>"><div class= "color_box_red"></div></a></td>
+          <td><%= link_to "Red", bikes_path(color: "Red")%></td>
+          <td><a href="<%=bikes_path(color: "Silver")%>"><div class= "color_box_silver"></div></a></td>
+          <td><%= link_to "Silver", bikes_path(color: "Silver")%></td>
+          <td><a href="<%=bikes_path(color: "White")%>"><div class= "color_box_white"></div></a></td>
+          <td><%= link_to "White", bikes_path(color: "White")%></td>
+          <td><a href="<%=bikes_path(color: "Yellow")%>"><div class= "color_box_yellow"></div></a></td>
+          <td><%= link_to "Yellow", bikes_path(color: "Yellow")%></td>
+        </tr>
+
+
+      </table>
+      </div>
+    </div>
+    </div><!--row-->
+  </div>
+
+    
+    
 
