minor code fixes

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -620,10 +620,20 @@ div.input-prepend
 .browse_body_type 
 {
 	text-align: center;
+	a:hover
+	{
+		background: inherit;
+		color: black;
+	}
 }
 .browse_makers 
 {
 	text-align: center;
+	a:hover
+	{
+		background: inherit;
+		color: black;
+	}
 }
 
 .sell_your_bike 
@@ -702,6 +712,11 @@ div.input-prepend
 	padding-top: 5px;
 	padding-bottom: 10px;
 	margin-bottom: 10px;
+	a:hover
+	{
+		background: inherit;
+		color: black;
+	}
 }
 .sidebar-nav
 {
@@ -844,6 +859,7 @@ td.listing_title
 	background-repeat: no-repeat;
 	background-position: left center;
 	background-size: 21px 20px;
+	margin-bottom: 30px;
 }
 
 #facebook-signin 
