--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -39,15 +39,15 @@
             <legend>Browse By: Top Makers</legend>
             <table class= "browse_makers">
               <tr>
-                <td><a href = '<%=bikes_path(make: "Bajaj")%>'><div class= "image_border"><%=image_tag "bajaj.jpg", size: "40x40"%>Bajaj</a></div></td>
-                <td><a href = '<%=bikes_path(make: "Daelim")%>'><div class= "image_border"><%= image_tag "daelim.jpg", size: "40x40"%>Daelim</a></div></td>
-                <td><a href = '<%=bikes_path(make: "Hero Honda")%>'><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "40x40"%>Hero</a></div></td>
-                <td><a href = "<%=bikes_path(make: 'Honda')%>"><div class= "image_border"><%= image_tag "honda.jpg", size: "40x40"%>Honda</a></div></td>
-                <td><a href = "<%=bikes_path(make: 'Hyosung')%>"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "40x40"%>Hyosung</a></div></td>
-                <td><a href = "<%=bikes_path(make: 'Royal Enfield')%>"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "40x40"%>Enfield</a></div></td>
-                <td><a href = '<%=bikes_path(make: "Suzuki")%>'><div class= "image_border"><%= image_tag "suzuki.jpg", size: "40x40"%>Suzuki</a></div></td>
-                <td><a href = '<%=bikes_path(make: "TVS")%>'><div class= "image_border"><%= image_tag "tvs.jpg", size: "40x40"%>TVS</a></div></td>
-                <td><a href = '<%=bikes_path(make: "Yamaha")%>'><div class= "image_border"><%= image_tag "yamaha.jpg", size: "40x40"%>Yamaha</a></div></td>
+                <td><a href = '<%=bikes_path(make: "Bajaj")%>'><div class= "image_border"><%=image_tag "bajaj.jpg", size: "40x40"%>Bajaj</div></a></td>
+                <td><a href = '<%=bikes_path(make: "Daelim")%>'><div class= "image_border"><%= image_tag "daelim.jpg", size: "40x40"%>Daelim</div></a></td>
+                <td><a href = '<%=bikes_path(make: "Hero Honda")%>'><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "40x40"%>Hero</div></a></td>
+                <td><a href = "<%=bikes_path(make: 'Honda')%>"><div class= "image_border"><%= image_tag "honda.jpg", size: "40x40"%>Honda</div></a></td>
+                <td><a href = "<%=bikes_path(make: 'Hyosung')%>"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "40x40"%>Hyosung</div></a></td>
+                <td><a href = "<%=bikes_path(make: 'Royal Enfield')%>"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "40x40"%>Enfield</div></a></td>
+                <td><a href = '<%=bikes_path(make: "Suzuki")%>'><div class= "image_border"><%= image_tag "suzuki.jpg", size: "40x40"%>Suzuki</div></a></td>
+                <td><a href = '<%=bikes_path(make: "TVS")%>'><div class= "image_border"><%= image_tag "tvs.jpg", size: "40x40"%>TVS</div></a></td>
+                <td><a href = '<%=bikes_path(make: "Yamaha")%>'><div class= "image_border"><%= image_tag "yamaha.jpg", size: "40x40"%>Yamaha</div></a></td>
               </tr> 
             </table>  
           </div><!--main_page_browse_by-->
