--- a/app/views/bikes/_current_selection.html.erb
+++ b/app/views/bikes/_current_selection.html.erb
@@ -1,11 +1,11 @@
     <div class="current_selection">
         <ul class="nav nav-list"> 
-        <legend>Current Selection</legend>  
+        <li><legend>Current Selection</legend>  </li>
 
             <% if @type_selection.nil? and @body_selection.nil? and @make_selection.nil? and @model_selection.nil? and @color_selection.nil? and @location_selection.nil? and @price_from_selection.nil? and @price_to_selection.nil? %>
-            No options selected. Please choose one or more options below.
+            <li>No options selected. Please choose one or more options below.
                 <%= link_to "New search", bikes_path%>
-
+            </li>
                 <%end%>    
             
             <% if !@type_selection.nil?%>
