minor code fixes

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -603,7 +603,7 @@ div.input-prepend
 
 }
 
-#main_page_browse 
+.span12.main_page_browse 
 {
 	box-shadow: 5px 0px 15px #888888;
 	margin-left: 0px;
@@ -756,7 +756,7 @@ div.input-prepend
 	display: inline;
 }
 
-#bike_picture 
+.bike_picture 
 {
 	box-shadow: 10px 10px 10px #888888;
 	margin-bottom: 15px;
@@ -787,7 +787,7 @@ td.view_bike_link{
 	bottom: 0%;
 	right: 10%;
 }
-#result_header
+.result_header
 {
 	position:relative;
 	legend 
@@ -803,7 +803,7 @@ td.view_bike_link{
 }
 @media(min-width: 729px)
 {
-	#result_header
+	.result_header
 	{
 		legend
 		{
@@ -823,7 +823,7 @@ td.view_bike_link{
 }
 @media(max-width: 420px)
 {
-	#result_header
+	.result_header
 	{
 		legend
 		{
@@ -1274,7 +1274,7 @@ a#logo_link:hover {
 	border-radius: 5px;
 	margin-bottom: 50px;
 }
-#showroom_browse
+.span4.showroom_browse
 {
 	background: white;
 	padding: 12px;
