--- a/app/views/bike_specs/showroom.html.erb
+++ b/app/views/bike_specs/showroom.html.erb
@@ -30,7 +30,7 @@
   </div>
 
 <div class = "row">
-  <div class = "span4" id = "showroom_browse">
+  <div class = "span4 showroom_browse">
     <legend>Browse by body type</legend>
     <table class= "browse_body_type">
       <tr>
@@ -47,7 +47,7 @@
       </tr> 
     </table> 
   </div>
-  <div class = "span4" id = "showroom_browse">
+  <div class = "span4 showroom_browse">
     <legend>Browse By: Top Makers</legend>
       <table class= "browse_maker">
         <tr>
