--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -16,7 +16,7 @@
     </div>
   </div>
 
-  <div id="main_page_browse" class= "span12">
+  <div class= "span12 main_page_browse">
     <div class = "row">
       <div class= "span8">
         <div class = "row">
@@ -53,7 +53,7 @@
           </div><!--main_page_browse_by-->
     </div>
     </div>
-    <div id= "facebook_page"class= "span4">
+    <div id= "facebook_page" class= "span4">
       <div class="fb-like-box" data-href="https://www.facebook.com/FacebookDevelopers" data-width="292" data-height="405" data-show-faces="true" data-stream="true" data-show-border="true" data-header="false"></div>
     </div>
   </div><!--row-->
@@ -62,7 +62,7 @@
 
     
    
-  <div id="main_page_browse" class= "span12">
+  <div class= "span12 main_page_browse">
   <div  class= "row">
     <div class= "span6">
       <div class = "main_page_browse_by">
