--- a/app/views/bike_specs/index.html.erb
+++ b/app/views/bike_specs/index.html.erb
@@ -7,7 +7,7 @@
           <div class="sidebar-nav">
                 <ul class="nav nav-list" id = "selection">
                     <legend>Filters</legend>
-                    <li><i class="icon-chevron-right"><a></a></i><i class="icon-chevron-up"><a></a></i>Body
+                    <li><icon class="icon-chevron-right"><a></a></icon><icon class="icon-chevron-up"><a></a></icon>Body
                         <ul>
                             <% @bodies.each do |body| %>
                                 <li>
@@ -16,7 +16,7 @@
                             <% end %>
                         </ul>
                     </li>
-                    <li><i class="icon-chevron-right"><a></a></i><i class="icon-chevron-up"><a></a></i>Make
+                    <li><icon class="icon-chevron-right"><a></a></icon><icon class="icon-chevron-up"><a></a></icon>Make
                         <ul>
                             <% @makes.each do |make| %>
                                 <li>
@@ -25,7 +25,7 @@
                             <% end %>
                         </ul>
                     </li>
-                    <li><i class="icon-chevron-right"><a></a></i><i class="icon-chevron-up"><a></a></i>Models
+                    <li><icon class="icon-chevron-right"><a></a></icon><icon class="icon-chevron-up"><a></a></icon>Models
                         <ul>
                             <% @models.each do |model| %>
                                 <li>
